    [THINGS THAT MAY BREAK YOUR CODE OR TESTS]
    * HTML::Element::as_XML now only escapes five characters, instead
      of escaping everything but alphanumerics and spaces.  This is
      more in line with the XML spec, and will no longer escape wide
      characters as two (or more) entities.  Resolves RT 14260.  Thanks
      to Carl Franks and somewhere [at] confuzzled.lu for assistance.

    [DOCUMENTATION]
    * Fixed description of HTML::Element::all_attr_names.  Thanks
      to dsteinbrunner [at] pobox.com for catching it.
    * Fixed example code in HTML::Element::push_content.  Thanks
      to dsteinbrunner [at] pobox.com for catching it. (RT 21293)
    

3.21	Sun Aug  6 19:10:00 CDT 2006
    [FIXES]
    * Updated HTML::Parser requirement to 3.46 to fix a bug in
      tag-rendering.t, noted in RT 20816 and 19796.  Thanks to 
      Gordon Lack and Ricardo Signes
    * Fixed HTML::TreeBuilder to not remove &nbsp; where it shouldn't,
      using patch supplied in RT 17481.  Thanks to Chris Madsen.

    [DOCUMENTATION]
    * HTML-Tree has a new maintainer: Pete Krawczyk <petek@cpan.org>

3.20    Sun Jun  4 22:24:38 CDT 2006
    No code changes.  Just making sure all notes go to Andy Lester,
    not Sean Burke.

3.19_04 Wed Feb  1 09:57:35 PST 2006
    [FIXES]
    * Modified starttag() so that it could render a literal HTML::Element
      correctly. Added a test case for this in tag-rendering.t
      Thanks to Terrence Brannon.


3.19_03 Fri Nov 25 22:20:51 CST 2005
    [THINGS THAT MAY BREAK YOUR CODE]
    * The store_declarations() method has been restored, but defaults
      to true instead of false.


3.19_02 Thu Nov 24 22:51:40 CST 2005

    [THINGS THAT MAY BREAK YOUR CODE]
    * The store_declarations() method has been removed.
    * Non-closing HTML tags like <IMG> are now rendered as <IMG />.
    * All values in tags are now double-quoted.  Previously, all-numeric
      values weren't quoted.

    [FIXES]