@@ -8,11 +8,18 @@ Changelog for HTML-Tree
       characters as two (or more) entities.  Resolves RT 14260.  Thanks
       to Carl Franks and somewhere [at] confuzzled.lu for assistance.
 
+    [TESTS]
+    * Added several new tests and enhanced others.  Thanks to Rocco
+      Caputo for t/attributes.t, and several others for providing
+      test cases in their RT bugs.
+
     [DOCUMENTATION]
     * Fixed description of HTML::Element::all_attr_names.  Thanks
       to dsteinbrunner [at] pobox.com for catching it.
     * Fixed example code in HTML::Element::push_content.  Thanks
       to dsteinbrunner [at] pobox.com for catching it. (RT 21293)
+    * Fixed description of HTML::Element::as_HTML.  Thanks to
+      Mark-Jason Dominus for catching it.  (RT 18569)
     
 
 3.21	Sun Aug  6 19:10:00 CDT 2006
